# imgapp

./: .env-sample  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.sh
static/css/: main.css
static/js/: app.js  main.js  utils.js
templates/: index.html
