[project]
name = "imgapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nitori", email = "nitori@chireiden.net" }
]
dependencies = [
    "gunicorn>=23.0.0",
    "flask>=3.0.3",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.rye.scripts]
serve = "gunicorn -w 4 --threads 8 -b 127.0.0.1:5000 app:app"
